# gitHub-intelligence-agent

./: .env.example  AI_COLLABORATION.md  README.md  agent.py  app.py  checkpointing.py  main.py  observability.py  pyproject.toml
.cursor/rules/: agent-architecture.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
tests/: test_agent.py  test_checkpointing.py  test_observability.py  test_stream_chunk.py
