[project]
name = "github-intelligence-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.15",
]

[tool.ruff]
# Ruff will validate against 3.11 rules to ensure you don't break backward compatibility
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "PT", "S"]
ignore = ["E501"]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
env_files = [".env"]
